--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
     <div>
-        <h1 id="catalog">Catalog Page</h1>
+        <a href="product.html"><h1 id="catalog">Catalog Page</h1></a>
     </div>
     <div  class="dest">
 
