--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li>Brick House</li>
-                <li><a><label>Catalog</label></a></li>
+                <a href="catalog.html"></a><li><a><label>Catalog</label></a></li></a>
                 <li><a><label></label></a></li>
                 <input type="text"placeholder="search">
                 <li><a><i class="fa fa-heart" aria-hidden="true"></i>></i></a></li>
