--- a/product.html
+++ b/product.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,225 +9,149 @@
     <link rel="stylesheet" href="style3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<div class="container">
-    <div id="just">
-        <h1>Product Page</h1>
-    </div>
-    <div  class="cm">
+<body>
+    <h1 id="h1">Product Page</h1>
+    <div class="container">
         <nav>
-            <ul>  
-                <li><a>About us</a></li>
-                <li><a>Support</a></li>
-                <li><a>Shipping and pay</a></li>
-                <li><a>Contact us</a></li>
-                <li><a>our stores</a></li>
-                </ul>
-                </nav>
-                <div id="gy">
-               <img src="image/south Africa.png" width="50px" height="30px">
-            
-    </div> 
-    <div id="kilm">
-    <label id="logo">BrickHouse</label> <button id="cat">Catalog</button> <button id="fa"><i class="fa fa-search" aria-hidden="true">search</i></button>
-    <button id="nj"><i class="fa fa-heart-o" aria-hidden="true"></i> </button> <button id="mk"><i class="fa fa-cart-plus" aria-hidden="true"></i>   <i class="fa faS-user" aria-hidden="true"></i></button>
-    </div>
-    <div id="lp">
-            <i class="fa fa-home" >Lego star Wars></i>
-    </div>
-    <div id="nl">
-            <p>AT-TE Walker |75337</p>
-   </div>
-   <div id="k">
-    <p>-25%</p>
-   </div>
-    <div id="f">
-    <img src="image/klp.jpeg">
-    </div>
-   <div id="lk">
-    <img src="image/bn.jpeg" width="50px" height="60px">
-   </div>
-   <div id="de">
-    <img src="image/toys.jpeg" width="50px" height="60px">
-
-   </div>
-   <div id="gn">
-    <img src="image/gk.jpeg" width="60px" height="60px">
-   </div>
-   <div id="ji">
-    <img src="image/tyc.jpeg" width="80px">
-   </div>
-   <div id="ko">
-    <img src="image/vd.jpeg" width="60px">
-   </div>
-   <div id="kp">
-    <img src="image/mmmm.jpeg" width="60px" height="50px">
-   </div>
-   <div id="hi">
-    <p id="v">AT-TE Walker |75337</p>
-    <p>(23)<img src="image/stas.png" width="60px"></p>
-
-   </div>
-   <br>
-   <div id="tr">
-    <p id="y">Available now</p>
-    <p id="i">$104.99 </p>   <p id="p"> $139.99</p>
-    <p>1   <button id="jj"><i class="fa-solid fa-plus"></i> </button></p>
-   </div>
-   <div id="kq">
-    <p>Add to bag  <button id="n"><i class="fa fa-heart-o" aria-hidden="true"></i> </button></p>
-
-   </div>
-   <div>
-    <img id="kk" src="image/bnbh.png" width="50px">
-    </div>
-    <br>
-    <br>
-    <div id="ux">
-        <img src="image/poshta.jpeg" width="20px">
-    </div>
-    <br>
-    <br>
-    <div id="hj">
-        <img src="image/location.png" width="20px">
-
-    </div>
-    <div id="pl">
-    <p id="kn">Pickup from stores</p>
-    <p id="pl">Nova Poshta delivery</p>
-    <p id="ka"> Ukropshta delivery</p>
-    </div>
-    <div id="rai">
-        <p id="se">See addresses</p>
-        <p id="ni">Free delivery</p>
-        <p id="nk">free delivery</p>
-    </div>
-    <div id="ml">
-        <p id="jk">About</p>
-        <p id="ph">Reviews:23</p>
-        <p id="uj">videos</p>
-
-    </div>
-    <div id="stmt">
-        <p>Rise into the battle against the Separatist droid army with this AT-TE crocodile!Commander
-        Cody is in the cockpit.Move through rocky terrain and fire your spining heavy blaster cannon.
-        Grab the weapons and thermal detonators from the cockpit and send the 212th Clone Trooper
-        squad to fight the battle droids on the ground.Who will win the battle of utapau?Everything<br>
-        depends on you!</p>
-    </div>
-    <div id="pix">
-        <p>Functions</p>
-        <img id="bn" src="image/nkih.jpeg">
-        <img id="lo" src="image/cdhy/bjk.jpeg">
-        <img id="hj" src="image/cdhy/brto.jpeg">
-    </div>
-    <div id="uio">
-        <p>You may be interested</p>
-        </div>
-        <div id="lk">
-            <div>
-        <button id="np"><i class="fa fa-heart-o" aria-hidden="true"></i> 
-            </div>
-            <div>
-            <img id="kpl" src="image/cdhy/imagec.jpeg" width="100px" height="80px">
-            </div>
-            <p id="ko">The Justifier|75323</p>
-        </div>
-        <div>
-            <button id="jkl">(16)&#8226;&#8226;&#8226;&#8226;</button>
-        </div>
-        <div>
-            <h id="jkp">$169.99</h>
-
-        </div>
-        <div id="plo">
+            <ul>
+                <li><a href="">About us</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">Shipping and pay</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Our stores</a></li>
+                <img src="img/flag.png" id="lg">
+            </ul>
+          </div>
+          <div class="y">
+            <label id="logo">BrickHouse</label> <a href="product3.html"> <button id="cat"> <i class="fa fa-th-large" aria-hidden="true"></i>catalog</button > <i id="search" class="fa fa-search" aria-hidden="true"></i></a>
+            <i id="heart" class="fa fa-heart-o" aria-hidden="true"></i> <i id="cart" class="fa fa-cart-plus" aria-hidden="true"></i> <i id="user" class="fa fa-user" aria-hidden="true"></i>
+          </div>
+          <div class="coconut">
+            <i  class="fa fa-envelope-open-o" aria-hidden="true"></i> <i class="fa fa-angle-right" aria-hidden="true"></i> Lego Star Wars <i class="fa fa-angle-right" aria-hidden="true"></i>  AT-TE Walker <i class="fa fa-arrows-v" aria-hidden="true"></i> 75337
+          </div>
           <div>
-            <img src="image/cdhy/djnago.jpeg" width="10%">
+            <button id="on">-25%</button>
+          </div>
+          <div>
+            <img id="I1" src="img/x1.jpeg">
+          </div>
+          <div>
+            <p id="mid">AT-TE Walker - 75337</p>
+           <p id="walk">(23) <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i></p>
+          </div>
+          <div class="us">
+            <p id="a">Available now</p>
+            <p id="area">$104.99</p>
+          <p> <button id="ris">-</button> 1 <button id="mm">+</button></p>
+          </div>
+          <div>
+           <p id="laso"> <button id="bag">Add to bag</button> <i id="like" class="fa fa-heart-o" aria-hidden="true"></i> </p>
+          </div>
+          <div class="lasi">
+            <p id="va">Pickup from stores</p>
+            <p id="ce">See addresses</p>
+            <p id="win">Nova Poshta delivery</p>
+            <p id="lea">Free delivery</p>
+            <p id="at">Ukrposhta delivery</p>
+            <p id="ai">Free delivery</p>
            </div>
-           <div>
-            <p id="bj">Dagobah Jadi Training<br>Diorama|75</p>
-        </div>
-        <button id="nks">(12)&#8226;&#8226;&#8226;&#8226;</button>
-        </div>
-        <div>
-            <p id="njm">$71.99</p>
-        </div>
-        <div id="fk">
+           <div class="ly">
+            <img id="x2" src="img/x2.jpeg">
+            <img id="x3" src="img/x3.jpeg">
+            <img id="x4" src="img/x4.jpeg">
+            <img id="x5" src="img/x5.jpeg">
+            <img id="x6" src="img/x6.jpeg">
+           </div>
+           <div class="co">
+           <button id="about">about</button></a><button id="reviews">reviews:23</button> <button id="videos">videos</button>
+           </div>
+           <hr id="hr">
+           <br>
+             <div>
+            <p id="rise">Rise into battle against the Separatist droid army with this mighty AT-TE Crocodile! Commander<br> Cody is in the cockpit. Move through rocky terrain and fire your spinning heavy blaster cannon.<br>Grab the weapons and thermal detonators from the cockpit and send the 212th Clone Trooper<br> Squad to fight the battle adroids on the ground. Who will win the battle of Utapau? Everything<br>depends on you!</p>
+           </div>
+           <br>
+           <h2 id="h2">Functions</h2>
+           <div class="red">
+            <button id="x8"><img src="img/x8.jpeg"></button> <button id="x9"><img src="img/x9.jpeg"></button>
+           </div>
+           <br>
             <div>
-                <img src="image/cdhy/kj.jpeg" width="25%">
-            </div>
-            <div>
-                <p id="fg">The Guardian Ship<br>|76196</p>
-            </div>
-            <div>
-                <p id="df">(12)&#8226;&#8226;&#8226;&#8226;</p>
-            </div>
-            <div>
-                <h id="ty">$159.99</h>
-            </div>
-
-            </div>
-            <div id="ol">
-            <div>
-                <p id="vv">-10%</p>
-            </div>
-            <div>
-                <img id="hjb" src="image/cdhy/bria.jpeg" width="45%">
-            </div>
-            <div>
-                <p id="hb">Sanctum Sanctorum<br>|76218</p>
-            </div>
-            <div>
-                <p id="gf">(23)&#8226;&#8226;&#8226;&#8226;</p>
-            </div>
-            <div>
-                <p id="lm">$224.99</p>
-            </div>
-        </div>
-
-           <div class="footer">
-             <div id="id">
-                <h3>Company</h3>
-                About BrickHouse<br>
-                Our shops<br>
-                News 
-             </div>
-             <div id="l">
-                <h3>Help</h3>
-                Shipping and pay<br>
-                Return and exchange<br>
-                reviews<br>
-                Feedback<br>
-                FAQ
-             </div>
-             <div id="i">
-                <h3>Contacts</h3>
-            0(800)111-22-33<br>
-            info.bhouse@gmail.com
-             </div>
-             <div id="k">
-                <h2>We Work</h2>
-            Mon-Fri 09:00-20:00<br>
-            Sat-Sun 10:00-20:00
-             </div>
-             <div id="tu">
-                  <h3>Social Network</h3>
-            <i id="jl" class="fa fa-youtube-play" aria-hidden="true"></i>
-        <i id="kk" class="fa fa-instagram" aria-hidden="true"></i>
-        <i id="nn" class="fa fa-facebook-square" aria-hidden="true"></i>
-             <br>
-                <h3>You Can Pay</h3>
-                <i class="fa fa-cc-visa" aria-hidden="true"></i>
-                <i class="fa fa-paypal" aria-hidden="true"></i>
-                <i class="fa fa-cc-mastercard" aria-hidden="true"></i>
-             </div>
-             <div id="re">
-                    <p id="ji">BrickHouse</p>
-                    <p id="lp">Privacy Policy</p>
-                    <p id="bi">Cookies</p>
-                     <p id="nu">Copyright</p>
-                </div>
-</div>
-</div>
-</div>
+            <button id="x10"><img src="img/x10.jpeg"></button>
+           </div>
+           <br>
+          <h2 id="to">You may be Interested</h2>
+          <br>
+          <br>
+          <div>
+            <i id="lucky" class="fa fa-heart-o" aria-hidden="true"></i> <button id="b1">-20%</button> <i id="nelly" class="fa fa-heart-o" aria-hidden="true"></i> <i id="liz" class="fa fa-heart-o" aria-hidden="true"></i> <button id="b2">-10%</button> <i id="mercy" class="fa fa-heart-o" aria-hidden="true"></i>
+          </div>
+          <div>
+            <img id="x11" src="img/x1.jpeg">
+            <img id="x12" src="img/x12.jpeg">
+            <img id="x13" src="img/x13.jpeg">
+            <img id="x14" src="img/x14.jpeg">
+            
+          </div>
+          <div class="P">
+            <p id="mokos">The Justifier | 75323</p>
+            <p id="bah">Dagobah Jedi Training<br> Diorama | 75330</p>
+            <p id="ship">The Guardian Ship<br> | 76196</p>
+            <p id="sheep">Sanctum Sancrotum<br> | 76218</p>
+          </div>
+          <div>
+            <p id="ody">(16) <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i  class="fa fa-star" aria-hidden="true"></i></p>
+            <p id="kili">$89.99</p>
+            <p id="kathi">(12) <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i></p>
+            <p id="recho"> (32) <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i></p>
+            <p id="MU">$249.99</p>
+            <p id="tip">(23) <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i> <i id="flip" class="fa fa-star" aria-hidden="true"></i></p>
+          </div>
+          <div>
+            <p id="s1">$169.99</p>
+            <p id="s3">$71.99</p>
+            <p id="s5">159.99</p>
+            <p id="s7">224.99</p>
+           </div>
 </body>
+<footer class="footer">
+  <div>
+    <h3>Company</h3>
+    About <br>
+    Our shops <br>
+    Bonus program <br>
+    Our partners <br>
+    News <br>
+  </div>
+  <div>
+    <h3 >Help</h3>
+    Shipping and pay <br>
+    Return and exchange <br>
+    Reviews <br>
+    Feedback <br>
+    FAQ
+  </div>
+  <div>
+  <h3>Contacts</h3>
+  o (800)111-22-33 <br>
+  info.bhouse@gmail.com <br>
+  <h4>We works:</h4> <br>
+  mon-fri: 09:00 - 20:00 <br>
+  sat-sun: 10:00 - 20:00
+</div>
+<div>
+  <h4>Social Networks:</h4>
+  <i class="fa fa-facebook-official" aria-hidden="true"></i> <i class="fa fa-instagram" aria-hidden="true"></i> <i class="fa fa-youtube-play" aria-hidden="true"></i>
+</div>
+<div>
+<h4>You can pay</h4>
+<i class="fa fa-cc-visa" aria-hidden="true"></i> <i class="fa fa-cc-mastercard" aria-hidden="true"></i> <i class="fa fa-paypal" aria-hidden="true"></i>
+</div>
+</footer>
+<div class="house">
+  <p id="hut">BrickHouse</label>
+    <p id="cy">Privacy policy</p>
+    <p id="cooky">Cookies</p>
+    <p id="vor">Copyright</p>
+</div>
 </html>
