--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
 </head>
 <body>
     <div class="content">
-        <h1 id="mode">main Page</h1>
+        <h1 id="mode">Main Page</h1>
         <nav>
             <ul>
                 <li><a>About us</a></li>
                 <li><a>Support</a></li>
                 <li><a>Shipping and pay</a></li>
-                <li><a>Contant us</a></li>
                 <li><a>Contact us</a></li>
                 <li><a>our stores</a></li>
                 </ul>
                 </nav>
     </div>
-    <div class="content2" >
+    <div class="content2">
         <nav>
             <ul>
                 <li>Brick House</li>
-                <a href="catalog.html"></a><li><a><label>Catalog</label></a></li></a>
-                <li><a><label></label></a></li>
+                <li><a><label>Catalog <a href="catalog.html"></a></label></li>
                 <input type="text"placeholder="search">
-                <li><a><i class="fa fa-heart" aria-hidden="true"></i>></i></a></li>
+                <li><a><i class="fa fa-heart" aria-hidden="true"></i></i></a></li>
                 <li><a><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
                 <li><a><i class="fa fa-user" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
     </div>
     <div class="hi">
-        <img src="hello.jpeg"width="650px" height="550px">
+        <p  id="wp">New<p>
+        <p id="nm">THE LORD OF THE</p>
+         <p id="jk">RINGS:RIVENDELL</p>
+        <img src="hello.jpeg" id="cdt" width="750px" height="550px">
     </div>
 </section>
 <div class="content3">
@@ -53,34 +54,34 @@
         <br>
         <button>select</button>
     </div>
-    <div id="h">
-        <h>Recently Viewed</h>
-    </div>
+    <!-- <div id="head">
+        <h id="jinb">Recently Viewed</h>
+    </div> -->
     <div class="photos">
     <div id="oo">
-    <img id="image1" src="gel.jpeg" >
-    <p>Dagobah Jedi Training><br>Diorama |75330<br>
+    <img id="image1" src="gel.jpeg" width="140px">
+    <p>Dagobah Jedi Training<br>Diorama |75330<br>
         $71.99</p>
     </div>
-        <div class="kk">
+        <div class="kevo">
         <img id="image2" src="readme.png" width="80px"  height="60px"> 
             <p id="lp">TIE BOmber<br>
             $64.99</p>
         </div>
-            <!-- <div id="ll">
-            <!-- <img  id="image3" src="watrs.jpg"> -->
-            <!-- <p>AT-TE Walker 75337<br> -->
-            <!-- $104.99</p> -->
-        <!-- </div> --> -->
-          <div  id="mm">
-        <img id="image4" src="tsc.jpeg" >
+            <div id="ll">
+            <img  id="image3" src="akiik.jpeg"  width="140px">
+            <p>AT-TE Walker 75337<br>
+            $104.99</p>
+        </div>
+          <div  id="mhj">
+        <img id="image4" src="outof.jpeg" width="140px" >
             <p>The Mandalorian's N-1 Starfighter 75325<br>
             96.87</p>
         </div>
     </div>
-    <div id="j">
-<h2 id="kn">New</h2>
-</div>
+    <!-- <div id="akiw">
+    <h2 id="kich">New</h2>
+</div> -->
 <div class="photos2">
 <div id="kp">
     <img id="pp" src="cdhy.jpeg" >
@@ -90,13 +91,13 @@
 </div> 
 <div id="nj"> 
 <img src="mumbua.jpeg" >
-<p>Toruk Makto &tree of souls<br>75574<br>
+<p id="kb">Toruk Makto &tree of souls<br>75574<br>
 $149.99</p>
 
 </div>
 <div id="lo">
 <img src="avy.jpeg">
-<p>Payakan the Tulkun &<br>Crabsuit 75579<br> $59.99</p>
+<p id="yy">Payakan the Tulkun &<br>Crabsuit 75579<br> $59.99</p>
 </div>
 <div id="hh">
 <img src="gel.jpeg" >
@@ -108,41 +109,55 @@ $149.99</p>
 <div button type="button"id="bttn1"> Series</button>
 </div>
 <div class="logos">
-<img src="adidas.jpeg" width="400px"height="300px">
-<img src="imags.jpeg" width="400px"height="300px">
-<img src="sad.png" width="400px"height="300px">
+<img src="adidas.jpeg" id="hh" width="250px"height="150px">
+<img src="imags.jpeg" id="mm" width="250px"height="150px">
+<img src="sad.png" id="jj" width="250px"height="150px">
 </div>
-<div class="logos">
-<img src="lego.jpeg"width="400px"height="300px" >
-<img src="cynthia/asaa.png" width="400px"height="300px">
-<img src="cynthia/potter.jpeg" width="400px"height="300px">
+<div class="logos2">
+<img src="lego.jpeg" id="sp" width="250px"height="150px" >
+<img src="cynthia/asaa.png" id="io" width="260px"height="160px">
+<img src="cynthia/potter.jpeg" id="pp" width="250px"height="150px">
 </div>
-<div class="logos">
-<img src="cynthia/legos.jpeg"width="400px"height="300px">
-<img src="cynthia/sawa.png" width="400px"height="300px">
-<img src="cynthia/czq.jpeg" width="400px"height="300px">
-<img src="cynthia/vsvs.jpeg" width="400px"height="300px">
+<div class="logos35">
+<img src="cynthia/legos.jpeg" id="st" width="250px"height="150px">
+<img src="cynthia/sawa.png" id="yt" width="250px"height="150px">
+<img src="cynthia/czq.jpeg" id="ct" width="250px"height="150px">
+<img src="cynthia/vsvs.jpeg" id="ew" width="250px"height="150px">
 </div>
-<div class="kel">
-    <img src="cynthia/nd.png"width="400px"height="300px">
-    <img src="cynthia/dts.webp"width="400px"height="300px">
-    <img src="cynthia/pixar.jpeg"width="400px"height="300px">
-    <img src="cynthia/duplo.png"width="400px"height="300px">
+<br>
+<br>
+<br>
+<div class="kelb">
+    <img src="cynthia/nd.png" id="fo" width="360px"height="150px">
+    <img src="cynthia/dts.webp" id="in" width="280px"height="160px">
+    <img src="cynthia/pixar.jpeg" id="sl" width="280px"height="150px">
+    <img src="cynthia/duplo.png" id="vw" width="250px"height="140px">
 </div>
 <div class="picc">
 <h2>Discounts</h2>
+</div>
 <div class="pic">
-<img src="cynthia/hia.jpeg" width="300px"height="300px">
-<img src="cynthia/birtha.jpeg" width="300px"height="300px">
-<img src="cynthia/csns.jpeg" width="300px"height="300px">
+<img src="cynthia/hia.jpeg" id="hh" width="295px"height="180px">
+<img src="cynthia/birtha.jpeg" id="fd" width="295px"height="180px">
+<img src="cynthia/csns.jpeg" id="bn" width="295px"height="180px">
 </div>
+<div id="uu">
+    <p id="see">New Year's discounts on <br>
+        all Advent calendars!</p>
+        <p id="vg">Birthday promo set</p>
+        <p id="rte">Explore Pandora with new <br>
+        the Avatar sets</p>
 </div>
+<div id="tred">
+    <p id="r"><button>	&#xf137;</button></p>
+    <p id="y9"><button>	&#xf138;</button></p>
+</div>
+
 <div class="semifooter">
 <nav>
-    <p>get a 5% discount on your purchase<br></p>
+    <p id="vf">Get a 5% discount on your purchase<br></p>
     <p>
-        <button id="button4">your email</button>
-        <button id="button5">Send</button>
+    your email<p>send
    </p>
 </nav>
 </div>
