--- a/product3.html
+++ b/product3.html
@@ -22,7 +22,7 @@
             </ul>
           </div>
          <div class="kops">
-            <label id="logo">BrickHouse</label> <button id="caty"> <i class="fa fa-th-large" aria-hidden="true"></i>catalog</button > <i id="search" class="fa fa-search" aria-hidden="true"></i>
+            <label id="logo">BrickHouse</label> <button id="caty"> <i class="fa fa-th-large" aria-hidden="true"></i>Catalog <a href="order.html"></a></button > <i id="search" class="fa fa-search" aria-hidden="true"></i>
             <i id="heartt" class="fa fa-heart-o" aria-hidden="true"></i> <i id="cart" class="fa fa-cart-plus" aria-hidden="true"></i> <i id="user" class="fa fa-user" aria-hidden="true"></i>
           </div>
           <div>
